adicionando horario de atendimento

--- a/LT_Lavagens/LT_Lavagens/Paginas/CadastraServicos.xaml
+++ b/LT_Lavagens/LT_Lavagens/Paginas/CadastraServicos.xaml
@@ -27,6 +27,7 @@
                                 <StackLayout Grid.Column="0">
                                     <Label  Text="{Binding Descricao}" FontAttributes="Bold" />
                                     <Label  Text="{Binding Servicos}" />
+                                    <Label Text="{Binding Horario}" />
                                 </StackLayout>
                             </Grid>
                         </ViewCell>
