--- a/LT_Lavagens/LT_Lavagens/Paginas/BuscarLavaJato.xaml
+++ b/LT_Lavagens/LT_Lavagens/Paginas/BuscarLavaJato.xaml
@@ -20,7 +20,7 @@
                                     <RowDefinition Height="Auto"></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <StackLayout Grid.Column="0">
-                                    <Label  Text="{Binding NomeEnpresa}" FontAttributes="Bold" />
+                                    <Label  Text="{Binding NomeEmpresa}" FontAttributes="Bold" />
                                     <Label Text="{Binding Rua}" />
                                     <Label  Text="{Binding Bairro}" />
                                     <Label  Text="{Binding Cidade}" />
